fixed an issue with the debounce on the homepage as it was bleeding into other pages

--- a/themes/nudev/src/__PRECOMP/sass/homepage.scss
+++ b/themes/nudev/src/__PRECOMP/sass/homepage.scss
@@ -11,7 +11,9 @@
 
 
 
-
+html{
+  overflow:hidden;
+}
 
 $columns: 3;
 
