--- a/themes/nudev/src/__PRECOMP/sass/partials/reset.scss
+++ b/themes/nudev/src/__PRECOMP/sass/partials/reset.scss
@@ -40,7 +40,8 @@ html {
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   overflow-x: hidden;
   height: 100%;
-  overflow:hidden;
+  // overflow:hidden;
+  
 }
 
 body {
